# gmail-to-groups

./: LICENSE  README.md  app.py  config.json  gmail_to_groups.py  install.bat  pyproject.toml  start_server.bat
static/css/: style.css
static/js/: main.js
templates/: index.html
